fixed some formatting issues

--- a/index.html
+++ b/index.html
@@ -45,25 +45,17 @@
   </nav>
 
     <section id="hero">
-      <div class="container">
-        <div class="row">
+        <div class='hero_section'>
           <div class="hero_text">
-           <div class="col-sm-6">
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <div class="feature">
-           <h2>Donation on Demand</h2></div>
-           <p class="lead">Geek Cycle is a Chicago community organization. We provide a marketplace where you can buy, sell or donate technology supplies and services from members of your local community. </p>
-            <button type="button" name="button" class="btn btn-primary"><a href="https://geek-cycle.sharetribe.com/">Marketplace</a></button></div>
-            </div>
-          <div class="col-sm-6" class="iphone">
-       <!--    <img src="images/greeniphonesm-1.png" class="img-responsive center-block"> -->
-        
-          <div class="wrapper">
+             <div class="feature">
+             <h2>Donation on Demand</h2></div>
+             <p class="lead">Geek Cycle is a Chicago community organization. We provide a marketplace where you can buy, sell or donate technology supplies and services from members of your local community. </p>
+              <button type="button" name="button" class="btn btn-primary"><a href="https://geek-cycle.sharetribe.com/">Marketplace</a></button>
+          </div>
+        </div>
+
+           <!-- <img src="images/greeniphonesm-1.png" class="img-responsive center-block"> -->
+        <div class='hero_section iphone-wrap'>
             <div class="iphone">
               <div class="power"></div>
               <div class="lock"></div>
@@ -72,7 +64,6 @@
               <div class="camera"></div>
               <div class="speaker"></div>
               <div class="screen">
-                <!-- Put screen stuff in here -->
                 <div class="appleicon">
                   <img src="https://goo.gl/4xuZUj" />
                 </div>
@@ -84,12 +75,7 @@
                 <div class="square"></div>
               </div>
             </div>
-          </div>
-
-          </div>
-          </div>
         </div>
-      </div>
       </section>
 
     <section id="section-1">
@@ -101,7 +87,7 @@
      <h6>How It Works</h6>
         <p>Let's say you bought a new computer but your old computer is useable and you want to sell or donate it to someone. Log onto Geek Cycle, upload a photo and description, and we will match you with a user in need. You can turn your unwanted tech supplies into cash or donations.</p>
         <br>
-        <h6>Terms of use:</h6>  
+        <h6>Terms of use:</h6>
           <li><b>Rights of Content</b><br>
           The users themselves retain the right to all text, pictures and other content that they create in the service. The users allow others to utilize the content in accordance with the nature of the service and furthermore allow the service provider to file information and data and make changes that are necessary for the service or the study, however other rights are not transferred from the users, unless specifically otherwise agreed. The responsibility of the content lies with the user, who has produced it to the service. The service provider has the right to remove any material when it deems it necessary.</li>
           <li><b>Disclaimer</b><br>
@@ -145,12 +131,12 @@
         class="img-responsive">
         <div class="feature">Greg - Developer</div>
         <p>A software engineer student at DePaul University, Greg is a full stack developer. A chance meeting with Lily at 1871 turned into a collaboration for Geek Cycle's Node App. In his free time he enjoys geeking out with the latest technology, listening to hip hop music and playing video games. </p>
-        </div> 
+        </div>
         <div class="col-sm-4">
         <img src="images/symbol.png"
         class="img-responsive">
         <div class="feature">David - Developer</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
+        <p>Software Engineer who specilizes in web developments and aplications, David is a full stack developer.</p>
         </div>
         </div>
         </div>
